data/derived/comb/progs/unify/prog1274.ml.out
Characters 68-69:
  | h :: t -> t + digitsOfInt (additivePersistence h);;
              ^
Error: This expression has type 'a list
       but an expression was expected of type int
